Fix footer text contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ footer {
     text-align: center;
     padding: 1rem 0;
     margin-top: 1rem;
+
+    p {
+        color:#d4e4f7;
+    }
 }
 
 h1 {
